--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,25 +226,151 @@ img {
 }
 
 /* Show menu */
-
+.show-menu{
+    right: 0;
+}
 
 /* Add blur header */
-
+.blur-header::after{
+    content: '';
+    position: absolute;
+    width: 1000%;
+    height: 100%;
+    background-color: hsla(var(--hue), 70%, 4%, .2);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
 
 /* Active link */
 
 
 /*=============== HOME ===============*/
+.home__container{
+    row-gap: 2rem;
+    padding-top: 1rem;
+}
 
+.home__img{
+    width: 220px;
+    justify-self: center;
+    mask-image: linear-gradient(to bottom,
+                hsla(var(--hue), 40%, 16%) 60%, 
+                transparent 100%);
+}
+
+.home__name{
+    font-size: var(--biggest-font-size);
+    font-weight: var(--font-bold);
+    word-break: break-word;
+    margin-bottom: 1rem;
+}
+
+.home__profession{
+    position: relative;
+    font-size: var(--big-font-size);
+    color: var(--text-color);
+}
+
+.home__profession::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -.5rem;
+    width: 25%;
+    height: 3px;
+    background-color: var(--text-color);
+}
+
+.home__scroll{
+    color: var(--title-color);
+    display: inline-flex;
+    column-gap: .5rem;
+    align-items: center;
+    justify-self: center;
+    margin-top: 3rem;
+}
+
+.home__scroll-box{
+    background-color: var(--first-color);
+    width: 32px;
+    height: 32px;
+    display: grid;
+    place-items: 1.5rem;
+    overflow: hidden;
+}
+
+.home_scroll-text{
+    font-weight: var(--font-semi-bold);
+}
+
+.home__scroll-box i{
+    animation: scroll-do 3s infinite;
+}
 
 /* Animate scroll icon */
-
+@keyframes scroll-down{
+    0%{
+        transform: translateY(-1rem);
+        opacity: 0;
+    }
+    50%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(.6rem);
+        opacity: 0;
+    }
+}
 
 /*=============== BUTTON ===============*/
 
 
 /*=============== WORKS ===============*/
+.work{
+    background-color: var(--container-color);
+}
 
+.work__card{
+    background-color: var(--first-color);
+}
+
+.work__link{
+    display: block;
+    position: relative;
+    background-color: var(--body-color);
+    padding: 2rem 1.5rem 1.5rem 1.5rem;
+    color: var(--text-color);
+    transition: transform .4s;
+}
+
+.work__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: .75rem;
+}
+
+.wrok__description{
+    margin-bottom: 1.5rem;
+}
+
+.work__link i{
+    position: absolute;
+    top: 1.8rem;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    transition: transform .4s;
+}
+
+.work__link:hover{
+    transform: translateY(-.35rem);
+}
+
+.work__link:hover i{
+    transform: translateX(.5rem);
+}
 
 /*=============== INFO ===============*/
 
